--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link rel="icon" type="image/png" sizes="192x192" href="http://localhost:1313//android-chrome-192x192.png">
 <link rel="apple-touch-icon" sizes="180x180" href="http://localhost:1313//apple-touch-icon.png">
 
-<link rel="alternate" type="application/rss+xml" href="http://localhost:1313/index.xml" title="My website">
+<link rel="alternate" type="application/rss+xml" href="http://localhost:1313/index.xml" title="HuoQiu Tech">
 <meta name="description" content="A Tech Blog"/>
 
 <title>
@@ -61,7 +61,7 @@
 
     
 
-    <h1 class="header-title">My website</h1>
+    <h1 class="header-title">HuoQiu Tech</h1>
 
     <div class="flex">
         
