完善网页，添加动态背景，实现中英文切换

--- a/about.html
+++ b/about.html
@@ -7,17 +7,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <canvas id="background-canvas"></canvas>
     <header>
         <nav>
             <ul>
                 <li><a href="index.html">首页</a></li>
                 <li><a href="about.html" class="active">关于我们</a></li>
             </ul>
+            <button id="language-toggle">English</button>
         </nav>
     </header>
     
     <main>
-        <section id="company-intro">
+        <section id="about-us">
             <h1>关于南京火球网络科技有限公司</h1>
             <p>南京火球网络科技有限公司是一家专注于手机游戏和电脑游戏开发的创新型企业。我们的使命是点燃游戏激情，创造无限可能，为玩家带来高品质、富有创意的游戏体验，不断推动游戏产业的发展与进步。</p>
         </section>
@@ -45,5 +47,8 @@
     <footer>
         <p>&copy; 2023 南京火球网络科技有限公司。保留所有权利。</p>
     </footer>
+
+    <script src="background.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
