--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                 <p><strong>地址：</strong>江苏省南京市江宁滨江开发区沈安大道739号</p>
                 <p><strong>Address：</strong>No. 739 Shengan Avenue, Jiangning Binjiang Development Zone, Nanjing, Jiangsu, China</p>
                 <p><strong>邮编：</strong>210000</p>
-                <p><strong>电话：</strong>18795885030</p>
-                <p><strong>邮箱：</strong>184141795@qq.com</p>
+                <p><strong> </strong> </p>
+                <p><strong> </strong> </p>
             </div>
             <form id="contact-form">
                 <input type="text" placeholder="您的姓名" required>
